--- a/index.html.haml
+++ b/index.html.haml
@@ -3,18 +3,18 @@
 %html
   %head
     %title Tr.yToFoc.us
-    %link{:href => '/stylesheets/screen.css', :media => 'screen, projection', :rel => 'stylesheet', :type => 'text/css'}
-    %link{:href => '/stylesheets/print.css', :media => 'print', :rel => 'stylesheet', :type => 'text/css'}
+    %link{:href => '/stylesheets/screen.css', :media => 'screen, projection', :rel => 'stylesheet'}
+    %link{:href => '/stylesheets/print.css', :media => 'print', :rel => 'stylesheet'}
     - require 'json'
     - srv_opts = JSON.load IO.read('srv_opts.json')
     - if srv_opts['js_assets'] == 'remote'
-      %link{:href => 'http://fonts.googleapis.com/css?family=Amethysta|Cabin|Stint+Ultra+Condensed', :rel => 'stylesheet', :type => 'text/css' }
-      %script{:type => 'text/javascript', :src => 'http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js'}
-      %script{:type => 'text/javascript', :src => 'http://d3js.org/d3.v3.min.js'}
+      %link{:href => 'http://fonts.googleapis.com/css?family=Amethysta|Cabin|Stint+Ultra+Condensed'}
+      %script{:src => 'http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js'}
+      %script{:src => 'http://d3js.org/d3.v3.min.js'}
     - if srv_opts['js_assets'] == 'local'
-      %link{:href => '/stylesheets/google-web-fonts.css', :rel => 'stylesheet', :type => 'text/css'}
-      %script{:type => 'text/javascript', :src => '/jquery.js'}
-      %script{:type => 'text/javascript', :src => '/d3.js'}
+      %link{:href => '/stylesheets/google-web-fonts.css', :rel => 'stylesheet'}
+      %script{:src => '/jquery.js'}
+      %script{:src => '/d3.js'}
     %script{:src => '/iterable_demo.js'}
 
   %body
