More pages work

--- a/index.html.haml
+++ b/index.html.haml
@@ -35,7 +35,8 @@
           %g{:transform => "translate(62.5, 145) scale(1.25)"}
             %use{:'xlink:href' => '#ruby-profile'}
 
-    %h1 Tr.yToFoc.us
+    %a#logo{:href => '#home'}
+      %h1 Tr.yToFoc.us
     #pages
       .page.text{:hidden => true}
         .boxy
