--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -3,7 +3,7 @@
   %head
     %title Tr.yToFoc.us
     %meta{:charset => "utf-8"}
-    %meta{:content => "Middleman", :name => "description"}
+    %meta{:content => "Tr.yToFoc.us", :name => "description"}
     %meta{:content => "on", "http-equiv" => "cleartype"}
     %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}
     %link{:href => "stylesheets/style.css", :rel => "stylesheet"}
@@ -17,6 +17,7 @@
     /   %link{:href => '/stylesheets/google-web-fonts.css', :rel => 'stylesheet'}
     /   %script{:src => '/jquery.js'}
     /   %script{:src => '/d3.js'}
+    %link{:href => 'assets/google-web-fonts.css', :rel => 'stylesheet'}
 
 
   %body
