--- a/source/stylesheets/base/base.styl
+++ b/source/stylesheets/base/base.styl
@@ -1,1 +1,23 @@
 // Placeholder
+
+$default-text-color = rgb(33, 33, 33)
+
+$tiny-type()
+    color: darken($default-text-color, 90%)
+    font-size: 8pt
+
+$normal-type()
+    color: $default-text-color
+    font-size: 20pt
+
+$big-type()
+    color: lighten($default-text-color, 5%)
+    font-size: 24pt
+
+$bigger-type()
+    color: lighten($default-text-color, 8.5%)
+    font-size: 32pt
+
+$code-fonts()
+  font-family: Monaco, Consolas, monospace
+
