Tidy up display of methods somewhat

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -21,8 +21,7 @@
 
 
   %body
-    %a#logo{href: '/'}
-      %h1 Tr.yToFoc.us
+    %a#logo{href: '/'}Tr.yToFoc.us
     %nav#ventures
       %a{href: '/iterable.html'}Iterable Array (now in d3!)
     = yield
