--- a/source/stylesheets/modules/iterable_demo/methods.styl
+++ b/source/stylesheets/modules/iterable_demo/methods.styl
@@ -3,13 +3,16 @@
 .methods
   $code-fonts()
 
-.method
-  .name
-    &::after
-      content: '()'
-  .block
-    &::before
-      content: 'block: '
-  .result
-    &::before
-      content: '# => '
+  .method
+    padding: $default-spacing
+    margin: $default-spacing
+    .args:not(:empty)
+      &::before
+        content: '('
+      &::after
+        content: ')'
+    .result:not(:empty)
+      &::before
+        content: '# => '
+    .empty
+      display: none
