--- a/source/stylesheets/layout/positioning.styl
+++ b/source/stylesheets/layout/positioning.styl
@@ -1,3 +1,15 @@
 // positioning
 
 $default-spacing = 5px
+
+body
+  margin-left: 7%
+  margin-right: @margin-left
+
+.flex-container
+  display: flex
+#iterable_demo
+  width: 120rem
+
+//article#narrative
+
