Mostly styling changes

--- a/source/iterable.html.slim
+++ b/source/iterable.html.slim
@@ -3,8 +3,8 @@ svg#assets hidden=true
   defs
 
 .flex-container
-  #iterable_demo
+  #iterable_demo.flex-child
 
-  article#narrative
+  article#narrative.flex-child
     - 3.times do
       p = lorem.paragraph
