--- a/source/stylesheets/style.css.styl
+++ b/source/stylesheets/style.css.styl
@@ -1,6 +1,7 @@
 @import 'nib'
 @import 'nib/reset'
 @import 'nib/vendor'
+@import 'nib/flex'
 @import 'helpers'
 // Import Base Styles
 @import "base/normalize"
