Make yielded element caption italic serif

--- a/source/stylesheets/modules/iterable_demo/methods.styl
+++ b/source/stylesheets/modules/iterable_demo/methods.styl
@@ -14,3 +14,8 @@
       content: '# => '
   .is-empty
     display: none
+
+.yield figcaption
+  font-family: Amethysta, Georgia, serif
+  font-style: italic
+
